apps/twip-pinball/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twip-pinball
  namespace: haenu
  labels:
    app: twip-pinball
spec:
  selector:
    matchLabels:
      app: twip-pinball
  template:
    metadata:
      labels:
        app: twip-pinball
    spec:
      containers:
      - name: twip-pinball
        image: hyeonwoo5342/twip-pinball:17
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '320Mi'
            cpu: '160m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
