apps/twip-pinball/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twip-pinball
  namespace: haenu
  labels:
    app: twip-pinball
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: twip-pinball
