apps/twip-pinball/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twip-pinball-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
  - host: pinball.twip.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: twip-pinball
            port:
              number: 3000
